--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "feckless-barnacle",
+  "name": "react-dilutioncalc",
   "version": "1.0.0",
-  "description": "Boilerplate",
+  "description": "Calculate the dilution for concentrated products",
   "author": "Marvin Mieth <ntwcklng@gmail.com>",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/ntwcklng/feckless-barnacle"
+    "url": "https://github.com/ntwcklng/react-dilutioncalc"
   },
   "scripts": {
     "start": "node webpack.dev.server.hot.js",
@@ -23,6 +23,7 @@
     "eslint": "^1.3.1",
     "eslint-plugin-react": "^3.3.0",
     "html-webpack-plugin": "^1.6.1",
+    "react-bootstrap": "^0.25.2",
     "react-hot-loader": "^1.3.0",
     "style-loader": "^0.12.3",
     "tap-spec": "^4.1.0",
